<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 首页 -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <!-- 集市 -->
    <item
        android:id="@+id/nav_market"
        android:icon="@drawable/ic_market"
        android:title="@string/nav_market" />

    <!-- 【关键】占位 Item -->
    <!-- title为空，enabled为false防止点击，icon设为透明或随便设一个不显示的 -->
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false"/>

    <!-- 消息 -->
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message_nav"
        android:title="@string/nav_message" />

    <!-- 我的 -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>