<?xml version="1.0" encoding="utf-8"?>
<!-- 顶部用户信息栏 -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingHorizontal="4dp">

    <ImageView
        android:id="@+id/home_return"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:src="@drawable/outline_arrow_back_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/post_user_avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/user_avatar_bg"
        android:scaleType="centerCrop"
        android:contentDescription="@string/user_avatar"
        tools:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toEndOf="@id/home_return"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/post_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="摄影师阿强"
        app:layout_constraintStart_toEndOf="@id/post_user_avatar"
        app:layout_constraintEnd_toStartOf="@id/followButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/followButton"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:background="@drawable/button_focus"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/follow"
        android:textColor="@color/selected_color"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/share_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:padding="10dp"
        android:src="@drawable/share_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>